特定ファイルの画像パスを取り出すことができた

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,5 +10,8 @@ services:
       - type: bind
         source: ../src
         target: /workdir
+      - type: bind
+        source: ${MI_DATA_PATH}
+        target: /data
     working_dir: /workdir
     command: python main.py
